@@ -1,3 +1,8 @@
+2009-01-08  Ira Rosen  <irar@il.ibm.com>
+
+	PR tree-optimization/37194
+	* gcc.dg/vect/costmodel/ppc/costmodel-pr37194.c: New test.
+
 2009-01-07  Jakub Jelinek  <jakub@redhat.com>
 
 	PR c++/38725
